--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=caiomello
 spring.datasource.password=
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 # EXIBE OS COMANDOS MYSQL 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+security.basic.enabled = false
